# truss-labs

./: .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  build-tarball.sh  docker-compose.yml  pyproject.toml
demo/: artifact_1_state_on_disk.sh  artifact_3_unix_pipe.sh  script.yaml
docs/: CPRA_WALKTHROUGH.md  DEMO_PLAYBOOK.md  DEPLOYMENT_ARCHITECTURES.md  EXTENSION_DEMO_SPEC.md  RECEIPT_SCHEMA.md  RECORD_HOMEPAGE_CAST.md  RELEASE.md  SANDBOX_SPEC.md
docs/blog/: 2026-04-17-the-birth-of-truss-labs.md
docs/research/: DESIGN_PRINCIPLES.md
examples/: demo.html  run_demo.sh
examples/policies/: phi_block_address_in_external_prompt.yaml  phi_redact_dob_in_response.yaml
examples/queries/: README.md  find-blocks-last-7d.jq  find-phi-receipts.duckdb.sql  retention-prune-candidates.sh
examples/receipts/: README.md  allowed.json  blocked_phi_address.json  redacted_dob_response.json
examples/siem/: README.md  rsyslog-imfile.conf  sentinel-ama-custom-log.md  splunk-uf-inputs.conf
extension/: README.md  content.js  hook.js  manifest.json  popup.html  popup.js  submit-gate.js
primitives/audit/: __init__.py  classifier.py  policy_engine.py  policy_eval.py  policy_loader.py  policy_schema.py  proxy.py  receipt_writer.py  schema.py  surfaces.py
primitives/fixtures/: langchain_audit.jsonl  langchain_broken_trace.json
primitives/mcp/: README.md  smoke_test.py  smoke_test_v12.py  truss_server.py
primitives/scripts/: soul_ingest.py  soul_query.py  soul_translate.py  soul_trap.py  truss.py  (+4 more)
www/: DEPLOY.md  astro.config.mjs  package-lock.json  package.json
(+50 files in other folders)
