[project]
name = "truss-labs-primitives"
version = "0.1.0"
description = "Truss Labs Sovereign Registry MCP server and CLI primitives."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "jsonschema>=4.26",
    "pyyaml>=6.0",
    "pydantic>=2.10",
    "fastapi>=0.115",
    "httpx>=0.27",
    "google-genai>=1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
